# calibremcp

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  .mcpbignore  .pre-commit-config.yaml  ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  QUERY_BOOKS_FIX_IMPLEMENTATION.md  README.md  README_DXT.md  SECURITY.md  TODO.md  build.ps1  build_dxt.ps1  calibre_config.json  calibremcp.dxt  check_publishers.py  config.json  curl_out.json  debug_mcp_tools.py  diagnose_startup.py  dxt_build.py  dxt_manifest.json  extension.toml  extension.wasm  extract_tools.py  find_and_open_book.py  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  mcp-config.json  minimal_test.py  package-lock.json  pyproject.toml  (+17 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-dxt.yml  ci-cd.yml  ci.yml  industrial-launch.yml  release.yml  version-bump.yml
assets/prompts/: author_analysis.md  book_comparison.md  book_discovery.md  bulk_operations.md  duplicate_detection.md  format_conversion.md  it_books.md  japanese_books.md  library_export.md  library_health.md  library_organization.md  library_search.md  metadata_cleanup.md  reading_goals.md  reading_recommendations.md  reading_statistics.md  series_management.md  smart_collections.md  system.md  tag_organization.md  troubleshooting.md  unread_priority.md
calibre/: __init__.py  conversion_manager.py  library_operations.py  manager.py  metadata_manager.py  search_operations.py
calibre_plugin/: README.md  __init__.py  about.txt  config.py  config_widget.py  db_adapter.py  mcp_client.py  ollama_client.py  ui.py
calibre_plugin/dialogs/: __init__.py  bulk_enrich_dialog.py  metadata_dialog.py  research_dialog.py  semantic_search_dialog.py  vl_query_dialog.py
config/: calibre_config.yaml  settings.yaml
docs/: AGENTIC_AND_RAG.md  ANNAS_ARCHIVE_CONFIG.md  API.md  BOOK_RESEARCH_SPEC.md  CALIBRE_DEBUG_EXPORT_AND_RAG_PLAN.md  CALIBRE_LIBRARY_STRUCTURE.md  COMIC_OCR_STRATEGY.md  COOKBOOK.md  Claude assessmen.md  Configuration.md  DOCUMENTATION_INDEX.md  DOWNLOAD_SITES.md  EXPORTS_IMPORTS_PLAN.md  EXPORT_USAGE.md  FINEREADER_INTEGRATION_ANALYSIS.md  FULL_TEXT_RAG_DESIGN.md  Full_Documentation.md  GRAPHIC_CANON_OCR_ANALYSIS.md  IMPROVEMENT_AND_EXPANSION_PLAN.md  MCP_DEVELOPMENT_WORKFLOW.md  Multi-Library_Enhancement_Specification.md  NEW_PORTMANTEAUS_IMPLEMENTATION.md  NEXTSTEPS_AI_WORKFLOWS_AND_LIGHT_RAG.md  PLAN_FASTMCP_31_RAG_SKILLS.md  PRD.md  PROGRESS_REPORT_2025-01-30.md  PROMPTS.md  QUERY_BOOKS_SEARCH_BUG_FIX.md  RAG_BOOK_TEXT_PLAN.md  REPOSITORY_ASSESSMENT_2025-09-06.md  REPRODUCTION_AND_VERIFICATION.md  SEARCH_QUERY_EXAMPLES.md  STATUS_REPORT.md  TAG_WEEDING_GUIDE.md  TOOLS_CONSOLIDATION.md  TOOL_DOCSTRING_STANDARD.md  Troubleshooting.md  UNICODE-FIX-GUIDE.md  USAGE_EXAMPLES_RATING_AND_DATES.md  USAGE_GUIDE_CLAUDE.md  (+6 more)
docs/adn-notes/: IMPROVEMENT-PLAN-2025-01-30.md  SEP-1577-in-Calibre-MCP-Agentic-Library-Orchestration.md  Webapp-Logs-Book-Modal-Session-2025-01-30.md
docs/development/: AI_TOOLS_IMPLEMENTATION_PLAN.md  CI_CD_STATUS.md  ERROR_HANDLING_AUDIT.md  FASTMCP_213_COMPLIANCE.md  MOCK_PLACEHOLDER_AUDIT.md  PHASE_3_DOCSTRING_COMPLETION.md  PHASE_3_DOCSTRING_PLAN.md  PHASE_4_TESTING_VALIDATION.md  PORTMANTEAU_REFACTORING_SUMMARY.md  PRE_COMMIT_SETUP.md  PYDANTIC_V2_MIGRATION.md  README.md  REMAINING_TOOL_MIGRATION.md  TEST_SUITE_REFACTORING.md
docs/integrations/: CALIBRE_INTEGRATION_GUIDE.md  CALIBRE_PLUGIN_DESIGN.md  CALIBRE_PLUGIN_IMPLEMENTATION_NOTES.md
docs/mcp-technical/: FASTMCP_2.13_PERSISTENT_STORAGE_PATTERN.md  MCP_APPS_PREFAB.md  MCP_OUTPUT_SCHEMAS_AND_SKILLS.md  PORTMANTEAU_MIGRATION_COMPLETE.md  PORTMANTEAU_TOOL_MIGRATION_PLAN.md  README.md  TENACITY_RETRY_PATTERN.md
docs/mcpb-packaging/: README.md
docs/notes/: STATUS_REPORT_NOTE.md
docs/plans/: ANNOTATION_INTELLIGENCE.md  AUDIOBOOK_GENERATOR.md  BOOK_OF_THE_DAY.md  DUPLICATE_DETECTION.md  READING_FLOW_INTEGRATION.md  README.md  ROADMAP.md
docs/research/: FASTMCP_2.13_PERSISTENCE_RESEARCH.md
mcpb/: .mcpbignore  CHANGELOG.md  README.md  manifest.json
moltbot-skill/: README.md
samples/: database_schema.json  db_schema_detailed.json  metadata_db_prefs_backup.json
scripts/: Get-DatabaseSchema.ps1  Run-Analysis.ps1  SOTA_SCRIPT_INFO.md  analyze_db.py  analyze_db_direct.py  backup-repo.ps1  build-mcpb-package.ps1  build_calibre_plugin.ps1  calibre-plugin-test.ps1  check_authors.py  check_db.py  check_logs.py  check_publishers.py  check_schema.py  check_tags.py  check_tools.py  count_tools.py  create_plugin_icon.py  create_test_db.py  create_test_files.py  db_schema.py  export_metadata_for_rag.py  extract_tools.py  fix-standards.ps1  inspect_db.py  inspect_fts_db.py  minimal_test.py  pre_commit_check.py  quick_check.py  restart_claude_and_check.ps1  restart_claude_and_check.py  restart_claude_and_check_mcp.ps1  scan_description.py  setup_extensive_test_data.py  setup_test_fixtures.py  test_python.py  test_server_load.py
server/: server.py
src/: lib.rs
tests/: QUICK_START.md  README.md  __init__.py  conftest.py  integration_tests.py  pytest.ini  run_tests.ps1  test_ai_enhancements.py  test_api.py  test_author_stats.py  test_basic.py  test_basic_functionality.py  test_battery.py  test_book_tools.py  test_comprehensive.py  test_db_init.py  test_direct.py  test_examples.md  test_fts_search.py  test_fts_snippets.py  test_import.py  test_integration.py  test_mcp_client.py  test_mcp_compliance.py  test_mcp_server.py  test_minimal.py  test_open_book_file.py  test_path_fix.py  test_query_books_integration.py  test_query_books_search.py  test_query_books_search_bug.py  test_runner.py  test_search_functionality.py  test_server_integration.py  test_stdio_integration.py  test_tool_preload.py
tools/: repo_stats.py
webapp/: .dockerignore  .env.docker.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  SETUP.md  docker-compose.yml  docker-up.ps1  setup-local.bat  setup-local.ps1  start-all.bat  start-local.bat  start.bat  start.ps1
(+555 files in other folders)
