[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibre-mcp"
version = "1.4.0"
description = "FastMCP 3.1+ server for conversational Calibre e-book library management with sampling, agentic workflows, skills, prompts, and LanceDB metadata RAG"
authors = [
    {name = "Sandra", email = "sandra@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mcp", "calibre", "ebooks", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "fastmcp>=3.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "rich>=13.8.0",
    "structlog>=24.4.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.9.0",
    "keyring>=24.0.0",
    "py-key-value-aio[filetree]>=0.4.4,<0.5.0", # FastMCP 2.14.1+ persistent storage backend
    "tenacity>=8.2.0", # Retry logic
    "psutil>=5.9.0", # System and process utilities (required by system_tools)
    "beautifulsoup4>=4.12.0", # Anna's Archive HTML parsing; EPUB location resolver
    "ebooklib>=0.18.0", # EPUB spine / phrase resolution for FTS locations
    "pymupdf>=1.24.0", # PDF page search for FTS locations (import fitz)
    "ruff>=0.14.1",
    "lancedb>=0.17.0",
    "fastembed>=0.4.0",
    "lxml>=5.1.0", # Robust XML parsing for arXiv Atom feed
]

[project.optional-dependencies]
apps = [
    "prefab-ui>=0.14.0",
]
rag = [
    "chromadb>=0.4.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.8",
    "twine>=5.1.0",
    "build>=1.2.0",
    "pre-commit>=3.6.0"  # Git hooks for code quality
]

[project.scripts]
calibre-mcp = "calibre_mcp.__main__:run"

[project.urls]
Homepage = "https://github.com/sandraschi/calibremcp"
Repository = "https://github.com/sandraschi/calibremcp.git"
Issues = "https://github.com/sandraschi/calibremcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
calibre_mcp = ["skills/**/*.md"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Hardened v13.1 Rule Set
select = [
    "E", "F", "I", "UP", "B", "S", "A", "ANN", "COM", "C4", "DTZ", "PIE", "T20", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "COM812", # Trailing comma missing (handled by formatter)
    "ISC001", # Single line implicit string concatenation (handled by formatter)
    "PLR0913", # Too many arguments
    "S101",   # Use of assert (standard for pytest)
    "TRY003", # Avoid specifying long messages in exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
